// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineExecutions render no data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
        >
          cd.serviceDashboard.totalDeployments: 0
        </p>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main searchIconStyle   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main executionCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card pipelineExecutionsEmptyStateContainer"
        >
          <div
            class="StyledProps--font StyledProps--main NoDataCard--noDataCard dataCard StyledProps--flex StyledProps--flex-align-center-center"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              style="align-items: center; margin-top: -48px; width: 470px;"
            >
              <img
                class="pipelineExecutionsEmptyStateImage"
                src="test-file-stub"
              />
              <p
                class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
              >
                cd.serviceDashboard.noPipelines
              </p>
              <div
                class="NoDataCard--buttonContainer"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineExecutions should render PipelineExecutions 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
        >
          cd.serviceDashboard.totalDeployments: 2
        </p>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main searchIconStyle   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main executionCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card card hoverCard"
          data-disabled="false"
          data-variant="Minimal"
        >
          <div
            class="cardLink"
          >
            <div
              class="content"
            >
              <div
                class="header"
              >
                <div
                  class="info"
                >
                  <div
                    class="nameGroup"
                  >
                    <div
                      class="pipelineName"
                    >
                      qa
                    </div>
                  </div>
                </div>
                <div
                  class="actions"
                >
                  <div
                    class="statusContainer"
                  >
                    <div
                      class="status success"
                    >
                      <span
                        class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                        icon="tick-circle"
                      >
                        <svg
                          data-icon="tick-circle"
                          height="9"
                          viewBox="0 0 16 16"
                          width="9"
                        >
                          <desc>
                            tick-circle
                          </desc>
                          <path
                            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span>
                        pipeline.executionStatus.Success
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="modulesContainer"
                />
              </div>
            </div>
            <div
              class="footer"
            >
              <div
                class="triggerInfo"
              >
                <div
                  class="wrapper"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="userLabel user"
                        tabindex="0"
                      >
                        <span
                          class="bp3-icon bp3-icon-user StyledProps--main StyledProps--color StyledProps--color-grey900"
                          icon="user"
                        >
                          <svg
                            data-icon="user"
                            height="18"
                            viewBox="0 0 16 16"
                            width="18"
                          >
                            <desc>
                              user
                            </desc>
                            <path
                              d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
                        >
                          dmeo
                        </p>
                      </div>
                    </span>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
                >
                  <span
                    class="triggerType"
                  >
                    execution.triggerType.MANUAL
                  </span>
                </p>
              </div>
              <div
                class="timers"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <p
                      class="StyledProps--font StyledProps--main timeAgo StyledProps--inline StyledProps--font-variation-tiny"
                      style="display: flex; align-items: center;"
                      tabindex="0"
                    >
                      <span
                        class="bp3-icon bp3-icon-calendar StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey900"
                        icon="calendar"
                      >
                        <svg
                          data-icon="calendar"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            calendar
                          </desc>
                          <path
                            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      dummy date
                    </p>
                  </span>
                </span>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline StyledProps--font-variation-tiny"
                  style="display: inline-flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey900"
                    icon="time"
                  >
                    <svg
                      data-icon="time"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        time
                      </desc>
                      <path
                        d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                  11s
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-card bp3-elevation-0 Card--card card hoverCard"
          data-disabled="false"
          data-variant="Minimal"
        >
          <div
            class="cardLink"
          >
            <div
              class="content"
            >
              <div
                class="header"
              >
                <div
                  class="info"
                >
                  <div
                    class="nameGroup"
                  >
                    <div
                      class="pipelineName"
                    />
                  </div>
                </div>
                <div
                  class="actions"
                >
                  <div
                    class="statusContainer"
                  />
                </div>
              </div>
              <div
                class="main"
              >
                <div
                  class="modulesContainer"
                />
              </div>
            </div>
            <div
              class="footer"
            >
              <div
                class="triggerInfo"
              >
                <div
                  class="wrapper"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="userLabel user"
                        tabindex="0"
                      >
                        <span
                          class="bp3-icon bp3-icon-user StyledProps--main StyledProps--color StyledProps--color-grey900"
                          icon="user"
                        >
                          <svg
                            data-icon="user"
                            height="18"
                            viewBox="0 0 16 16"
                            width="18"
                          >
                            <desc>
                              user
                            </desc>
                            <path
                              d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
                        >
                          Anonymous
                        </p>
                      </div>
                    </span>
                  </span>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
                >
                  <span
                    class="triggerType"
                  >
                    execution.triggerType.MANUAL
                  </span>
                </p>
              </div>
              <div
                class="timers"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <p
                      class="StyledProps--font StyledProps--main timeAgo StyledProps--inline StyledProps--font-variation-tiny"
                      style="display: flex; align-items: center;"
                      tabindex="0"
                    >
                      <span
                        class="bp3-icon bp3-icon-calendar StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey900"
                        icon="calendar"
                      >
                        <svg
                          data-icon="calendar"
                          height="10"
                          viewBox="0 0 16 16"
                          width="10"
                        >
                          <desc>
                            calendar
                          </desc>
                          <path
                            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      dummy date
                    </p>
                  </span>
                </span>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline StyledProps--font-variation-tiny"
                  style="display: inline-flex; align-items: center;"
                >
                  <span
                    class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey900"
                    icon="time"
                  >
                    <svg
                      data-icon="time"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        time
                      </desc>
                      <path
                        d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                  
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineExecutions should render PipelineExecutions with error true 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
        >
          cd.serviceDashboard.totalDeployments: 0
        </p>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main searchIconStyle   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main executionCardContainer"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            style="align-items: center; width: 500px;"
          >
            <span
              class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
              icon="error"
            >
              <svg
                data-icon="error"
                height="32"
                viewBox="0 0 20 20"
                width="32"
              >
                <desc>
                  error
                </desc>
                <path
                  d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
            >
              We cannot perform your request at the moment. Please try again.
            </p>
            <button
              class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <div
                class="bp3-spinner bp3-button-spinner"
              >
                <div
                  class="bp3-spinner-animation"
                >
                  <svg
                    height="20"
                    stroke-width="16.00"
                    viewBox="-3.00 -3.00 106.00 106.00"
                    width="20"
                  >
                    <path
                      class="bp3-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp3-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="bp3-button-text"
              >
                Retry
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineExecutions should render PipelineExecutions with loading true 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-grey600"
        >
          cd.serviceDashboard.totalDeployments: 0
        </p>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main searchIconStyle   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main executionCardContainer"
      >
        <div
          class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
            style="align-items: center; width: 500px;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
              data-icon="steps-spinner"
            >
              <svg
                height="32"
                viewBox="0 0 128 128"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                    fill="#ff8e02"
                  />
                  <path
                    d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                    fill="#ffddb3"
                    fill-opacity="0.3"
                  />
                  <path
                    d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                    fill="#ffd29a"
                    fill-opacity="0.4"
                  />
                  <path
                    d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                    fill="#ffc680"
                    fill-opacity="0.5"
                  />
                  <path
                    d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                    fill="#ffbb67"
                    fill-opacity="0.6"
                  />
                  <path
                    d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                    fill="#ffb04d"
                    fill-opacity="0.7"
                  />
                  <path
                    d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                    fill="#ffa535"
                    fill-opacity="0.8"
                  />
                  <path
                    d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                    fill="#ff991b"
                    fill-opacity="0.9"
                  />
                  <animatetransform
                    attributeName="transform"
                    calcMode="discrete"
                    dur="1200ms"
                    repeatCount="indefinite"
                    type="rotate"
                    values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                  />
                </g>
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
            >
              Loading, please wait...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
